frontend/_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-frontend
spec:
  selector:
    app: todo-app-frontend
  ports:
  - port: 8080
    targetPort: 8080
