frontend/_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-frontend
  labels:
    name: todo-app-frontend
spec:
  rules:
  - host: todo-app.example.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-app-frontend
            port: 
              number: 80
